Done quite a bit of bodgery

--- a/Paper/abstract.tex
+++ b/Paper/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-Reducing energy consumption is a prerequisite for future advances in computing at scale. This fact has led performance engineers to look towards software-level power optimization as a potential means to reduce the energy consumed by scientific codes. We present an investigation into the feasibility and potential benefits of this approach. We assess various power measurement and modelling techniques and comment on their ability to help developers identify power optimizations. We then attempt to provide a realistic idea of how much benefit can be expected as a result of applying these optimizations. We show that for current hardware there is limited scope for improving energy efficiency through software optimisation alone. \golden
+Reducing energy consumption is a prerequisite for future advances in computing at scale. This fact has led performance engineers to look towards software-level power optimization as a potential means to reduce the energy consumed by scientific codes. We present an investigation into the feasibility and potential benefits of this approach. We assess various power measurement and modelling techniques and comment on their ability to help developers identify power optimizations. We then attempt to provide a realistic idea of how much benefit can be expected as a result of applying these optimizations. We find that for current hardware there is limited scope for improving energy efficiency through software optimisation alone. \golden
 \end{abstract}
