--- a/Paper/library.bib
+++ b/Paper/library.bib
@@ -1,12 +1,98 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Stephen Roberts at 2014-11-12 22:30:23 +0000 
+%% Created for Stephen Roberts at 2014-11-16 15:24:38 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{li:2009aa,
+	Author = {Sheng Li and Ahn, Jung-Ho and Strong, R.D. and Brockman, J.B. and Tullsen, D.M. and Jouppi, N.P.},
+	Booktitle = {Microarchitecture, 2009. MICRO-42. 42nd Annual IEEE/ACM International Symposium on},
+	Date-Added = {2014-11-16 15:17:59 +0000},
+	Date-Modified = {2014-11-16 15:18:09 +0000},
+	Issn = {1072-4451},
+	Keywords = {XML;cache storage;computer architecture;logic design;microprocessor chips;performance evaluation;ITRS roadmap;McPAT;PARSEC benchmark simulation;SOI;XML interface;bulk CMOS;cache sharing;chip multiprocessor;critical-path timing modeling;double-gate transistors;energy-delay-area product;in-order processor cores;integrated memory controllers;leakage power modeling;manycore architectures;manycore processor configurations;microarchitectural level;multicore architectures;multiple-domain clocking;networks-on-chip;out-of-order processor cores;performance simulator;shared caches;size 90 nm to 22 nm;Costs;Electronic design automation and methodology;Integrated circuit interconnections;Microarchitecture;Multicore processing;Out of order;Predictive models;Semiconductor device modeling;Space exploration;Timing;Performance;Verification},
+	Month = {Dec},
+	Pages = {469-480},
+	Title = {McPAT: An integrated power, area, and timing modeling framework for multicore and manycore architectures},
+	Year = {2009}}
+
+@inproceedings{karkhanis:2007aa,
+	Acmid = {1250712},
+	Address = {New York, NY, USA},
+	Author = {Karkhanis, Tejas S. and Smith, James E.},
+	Booktitle = {Proceedings of the 34th Annual International Symposium on Computer Architecture},
+	Date-Added = {2014-11-16 15:05:12 +0000},
+	Date-Modified = {2014-11-16 15:05:12 +0000},
+	Doi = {10.1145/1250662.1250712},
+	Isbn = {978-1-59593-706-3},
+	Keywords = {analytical model, application specific processors, design optimization, energy model, performance model},
+	Location = {San Diego, California, USA},
+	Numpages = {10},
+	Pages = {402--411},
+	Publisher = {ACM},
+	Series = {ISCA '07},
+	Title = {Automated Design of Application Specific Superscalar Processors: An Analytical Approach},
+	Url = {http://doi.acm.org/10.1145/1250662.1250712},
+	Year = {2007},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/1250662.1250712},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/1250662.1250712}}
+
+@inproceedings{isci:2003aa,
+	Acmid = {956567},
+	Address = {Washington, DC, USA},
+	Author = {Isci, Canturk and Martonosi, Margaret},
+	Booktitle = {Proceedings of the 36th Annual IEEE/ACM International Symposium on Microarchitecture},
+	Date-Added = {2014-11-16 15:01:34 +0000},
+	Date-Modified = {2014-11-16 15:01:35 +0000},
+	Isbn = {0-7695-2043-X},
+	Pages = {93--},
+	Publisher = {IEEE Computer Society},
+	Series = {MICRO 36},
+	Title = {Runtime Power Monitoring in High-End Processors: Methodology and Empirical Data},
+	Url = {http://dl.acm.org/citation.cfm?id=956417.956567},
+	Year = {2003},
+	Bdsk-Url-1 = {http://dl.acm.org/citation.cfm?id=956417.956567}}
+
+@inproceedings{hong:2010aa,
+	Acmid = {1815998},
+	Address = {New York, NY, USA},
+	Author = {Hong, Sunpyo and Kim, Hyesoon},
+	Booktitle = {Proceedings of the 37th Annual International Symposium on Computer Architecture},
+	Date-Added = {2014-11-16 14:59:05 +0000},
+	Date-Modified = {2014-11-16 14:59:06 +0000},
+	Doi = {10.1145/1815961.1815998},
+	Isbn = {978-1-4503-0053-7},
+	Keywords = {CUDA, GPU architecture, analytical model, energy, performance, power estimation},
+	Location = {Saint-Malo, France},
+	Numpages = {10},
+	Pages = {280--289},
+	Publisher = {ACM},
+	Series = {ISCA '10},
+	Title = {An Integrated GPU Power and Performance Model},
+	Url = {http://doi.acm.org/10.1145/1815961.1815998},
+	Year = {2010},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/1815961.1815998},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/1815961.1815998}}
+
+@article{tiwari:1994aa,
+	Author = {Tiwari, V. and Malik, S. and Wolfe, A.},
+	Date-Added = {2014-11-16 00:28:17 +0000},
+	Date-Modified = {2014-11-16 00:28:17 +0000},
+	Doi = {10.1109/92.335012},
+	Issn = {1063-8210},
+	Journal = {Very Large Scale Integration (VLSI) Systems, IEEE Transactions on},
+	Keywords = {computer testing;integrated circuit testing;real-time systems;software cost estimation;software performance evaluation;Fujitsu SPARClite 934;Intel 486DX2;dedicated processor;design space;embedded software;instruction level power model;microprocessors;power analysis technique;power analysis tools;power constraints;power reduction;software power minimization;Application software;Circuits;Costs;Embedded computing;Embedded software;Embedded system;Logic;Minimization;Power system modeling;Silicon},
+	Month = {Dec},
+	Number = {4},
+	Pages = {437-445},
+	Title = {Power analysis of embedded software: a first step towards software power minimization},
+	Volume = {2},
+	Year = {1994},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/92.335012}}
 
 @inproceedings{jan:2009aa,
 	Author = {Jan, C-H and Agostinelli, M and Buehler, M and Chen, Z-P and Choi, S-J and Curello, G and Deshpande, H and Gannavaram, S and Hafez, W and Jalan, U and others},
