--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -11,7 +11,7 @@
 \usepackage{booktabs}
 \usepackage[justification=centering]{caption}
 
-\title{Software Optimizations for Reduced Energy Consumption: A Feasibility Study}                            
+\title{Software Optimizations for Reduced CPU Energy Consumption: A Feasibility Study}                            
 \author{\IEEEauthorblockN{Stephen I. Roberts and Stephen Jarvis} \\
 \IEEEauthorblockA{Department of Computer Science,\\
 The University of Warwick}\\
@@ -24,6 +24,9 @@ The University of Warwick}\\
 \newcommand{\golden}{}
 \renewcommand{\golden}{{\color{green} \checkmark}}
 
+
+\newcommand{\findref}{}
+\renewcommand{\findref}{{\color{red} FindRef}}
 
 \newcommand{\todo}[1]{}
 \renewcommand{\todo}[1]{{\color{red} TODO: {#1}}} % comment me out for prod
